Fixed compile errors with OpenFST 1.3.1

--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -4,13 +4,13 @@ AM_LDFLAGS = -lfst -lxerces-c -ldl
 bin_PROGRAMS = kyfd componentcompose beamtrim buildfstmodel
 
 kyfd_SOURCES = kyfd.cc
-kyfd_LDADD = ../lib/libkyfd.la
+kyfd_LDADD = ../lib/libkyfd.la ${AM_LDFLAGS}
 
 componentcompose_SOURCES = componentcompose.cc
-componentcompose_LDADD = ../lib/libkyfd.la
+componentcompose_LDADD = ../lib/libkyfd.la  ${AM_LDFLAGS}
 
 buildfstmodel_SOURCES = buildfstmodel.cc
-buildfstmodel_LDADD = ../lib/libkyfd.la
+buildfstmodel_LDADD = ../lib/libkyfd.la  ${AM_LDFLAGS}
 
 beamtrim_SOURCES = beamtrim.cc
-beamtrim_LDADD = ../lib/libkyfd.la
+beamtrim_LDADD = ../lib/libkyfd.la ${AM_LDFLAGS}
