--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -2,4 +2,4 @@ AM_CPPFLAGS = -I$(srcdir)/../include -I$(FSTDIR)/src/bin
 
 lib_LTLIBRARIES = libkyfd.la
 libkyfd_la_SOURCES = decoder.cc decoder-config.cc
-libkyfd_la_LDFLAGS = -lxerces-c -version-info 0:0:0
+libkyfd_la_LDFLAGS = -version-info 0:0:0 -lxerces-c -lfst
