Made it possible to derive samples from FSTs

--- a/src/include/kyfd/Makefile.am
+++ b/src/include/kyfd/Makefile.am
@@ -1,1 +1,1 @@
-include_HEADERS = beam-trim.h component-arc.h component-map.h component-weight.h components.h decoder-config.h decoder.h fallback-matcher.h fst-node.h string-manager.h util.h
+include_HEADERS = beam-trim.h component-arc.h component-map.h component-weight.h components.h decoder-config.h decoder.h fallback-matcher.h fst-node.h string-manager.h util.h sampgen.h
